system/local/zones/hornhorse/ingress/alertmanager-hornhorse.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-alertmanager
  namespace: prometheus
  labels:
    app.kubernetes.io/name: kube-prometheus-stack-alertmanager
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://pomerium-proxy.pomerium.svc.cluster.local/verify?uri=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-signin: "https://pomerium-proxy.pomerium.svc.cluster.local?uri=$scheme://$host$request_uri"
spec:
  rules:
  - host: alertmanager.horn.horse
    http:
      paths:
      - backend:
          service:
            name: kps-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.horn.horse
    secretName: alertmanager-hornhorse-cert
