system/local/zones/hornhorse/ingress/grafana-hornhorse.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana
  namespace: pomerium
  labels:
    app.kubernetes.io/name: kube-prometheus-stack-grafana
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: grafana.horn.horse
    http:
      paths:
      - backend:
          service:
            name: pomerium-proxy
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.horn.horse
    secretName: grafana-hornhorse-cert
