system/local/zones/hornhorse/ingress/kps-alertmanager.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: kube-prometheus-stack-alertmanager
  name: kps-alertmanager
  namespace: prometheus
spec:
  rules:
  - host: alertmanager.horn.horse
    http:
      paths:
      - backend:
          service:
            name: kps-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.horn.horse
    secretName: alertmanager-hornhorse-cert
