system/local/zones/hornhorse/ingress/kps-prometheus.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: kube-prometheus-stack-prometheus
  name: kps-prometheus
  namespace: prometheus
spec:
  rules:
  - host: prometheus.horn.horse
    http:
      paths:
      - backend:
          service:
            name: kps-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.horn.horse
    secretName: prometheus-hornhorse-cert
