system/local/zones/hornhorse/ingress/kube-prometheus-stack-grafana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kube-prometheus-stack
  name: kube-prometheus-stack-grafana
  namespace: prometheus
spec:
  rules:
  - host: grafana.horn.horse
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.horn.horse
    secretName: grafana-hornhorse-cert
