system/local/zones/hornhorse/ingress/kubernetes-dashboard-hornhorse.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: stuartpb-letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-url: "https://forwardauth.horn.horse/verify?uri=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-signin: "https://forwardauth.horn.horse/?uri=$scheme://$host$request_uri"
spec:
  ingressClassName: internal
  rules:
  - host: kubernetes-dashboard.horn.horse
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kubernetes-dashboard.horn.horse
    secretName: kubernetes-dashboard-hornhorse-cert
